[project]
name = "django-spirit"
dynamic = ["version"]
description = "Spirit is a Python based forum powered by Django."
authors = [
    { name = "Esteban Castro Borsani", email = "ecastroborsani@gmail.com" }
]
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.9"
dependencies = [
    "Django>=4.2,<6",
    "django-haystack~=3.3",
    "whoosh==2.7.4",
    "mistune==0.8.4",
    "Pillow>=11",
    "olefile==0.47",
    "django-infinite-scroll-pagination~=1.3",
    "django-djconfig~=0.11",
    "tzdata",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.optional-dependencies]
files = [
    "python-magic==0.4.27",
    "python-magic-bin==0.4.14; sys_platform == 'win32'",
]
huey = [
    "huey~=2.5",
]
celery = [
    "celery[redis]~=5.4",
]

[project.urls]
Documentation = "https://spirit.readthedocs.io"
Source = "https://github.com/nitely/Spirit"
Donate = "https://ko-fi.com/nitely_"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
spirit = "spirit.extra.bin.spirit:main"

[tool.setuptools]
packages = ["spirit"]
license-files = []

[tool.setuptools.dynamic]
version = { attr = "spirit.__version__" }

[tool.ruff]
src = ["spirit"]
line-length = 88
extend-exclude = [
    "*/migrations/*",
]

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
extend-select = ["E501"]

[tool.ruff.lint.flake8-annotations]
ignore-fully-untyped = true
mypy-init-return = true

[dependency-groups]
dev = [
    "django-debug-toolbar>=4.4.6",
]
